--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,6 @@
 # Built application files
 *.apk
 *.ap_
-
-# Files for the ART/Dalvik VM
 *.dex
 
 # Java class files
@@ -12,10 +10,15 @@
 bin/
 gen/
 out/
+build
 
 # Gradle files
 .gradle/
+gradle.properties
 build/
+
+# Signing files
+.signing/
 
 # Local configuration file (sdk path, etc)
 local.properties
@@ -34,6 +37,8 @@ captures/
 
 # IntelliJ
 *.iml
+.idea
+.idea/libraries/
 .idea/workspace.xml
 .idea/tasks.xml
 .idea/gradle.xml
@@ -41,10 +46,6 @@ captures/
 .idea/dictionaries
 .idea/libraries
 .idea/caches
-
-# Keystore files
-# Uncomment the following line if you do not want to check your keystore files in.
-#*.jks
 
 # External native build folder generated in Android Studio 2.2 and later
 .externalNativeBuild
@@ -63,3 +64,12 @@ fastlane/Preview.html
 fastlane/screenshots
 fastlane/test_output
 fastlane/readme.md
+
+# OS-specific files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
